library/general/volumeresources/samples/container-emptydir-limit/constraint.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sVolumeRequests
metadata:
  name: container-emptydir-limit
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "DaemonSet", "ReplicaSet", "StatefulSet"]
  parameters:
    volumesizelimit: 1Gi
