library/general/volumeresources/samples/container-emptydir-limit/example_allowed_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-pod
  labels:
    app: allowed-pod
spec:
  containers:
  - name: allowed-pod
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /demo
      name: demo-volume
  volumes:
  - name: demo-volume
    emptyDir: 
      sizeLimit: 16Mi
      medium: Memory
